#531936: Cache handling on contexts was spotty and could cause random errors.
#545540 by Roger López: Add 5 page elements as available panes for using Panels as your primary page layout: breadcrumb, page title, messages, tabs and help box.
#537776 by rfay: CTools Plugin Example module to help guide people in making plugins.
#552020: Show the administrative description on page manager edit forms.

ctools 6.x-1.0-rc1
==================

#510968: Arguments needed to be recalulculated when path changed in page task.
#522454 by stella: export.inc not properly using the 'key' instead of 'name' everywhere.
#132557: Allow alter hook for rendered data: hook_ctools_render_alter()
#520128: Context object may not be available when loading page cache.
#498066 by mikl: Fix class names in advanced help.
#504286 by Darren Oh: Set proper primary key on ctools_object_cache
#514432 by markus_petrux: Various node fields available as a pane.
#451928 by populist: Fix file upload from modals.
#522836 by andrewlevine: Add form_clean_id() to ctools_rebuild_form() to prevent extraneous -1s from appearing.
#518254: Accidentally inverted truth value on compare users.
#464252 by andrewlevine: Helper to make onchange AJAX requests for select boxes.
#490672 by dereine: Title overrides not working for system block using custom block.
#520402: Disabled some concept code for later use that apparently conflicts with admin_menu.
#523712: Fix call-time pass by reference typo.
#477334 by dkruglyak: Remove forced lowercase on CSS processing.
#484340: Allow keyword substitution in custom content.
#458300: Option to inherit panel path on views panes not being properly honored.
#493620: Add a PHP Code option to access control.
#516222: Use "DELETE FROM" instead of "TRUNCATE" which is not supported by SQLite.
#444456: Add Node: Node type as a context converter for substitutions and views arguments.
#516504: Make sure optional contexts are truly and completely optional.